--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: 6.1.0
   path_provider: ^2.1.3
   pinput: ^4.0.0
+  cached_network_image: ^3.3.1
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
