--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   pinput: ^4.0.0
   cached_network_image: ^3.3.1
   image_picker: ^1.0.8
+  firebase_core: ^2.27.0
+  cloud_firestore: ^4.15.8
+  provider: ^6.1.2
+  firebase_auth: ^4.17.8
 
 dev_dependencies:
   flutter_test:
