--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.15.8
   provider: ^6.1.2
   firebase_auth: ^4.17.8
+  firebase_storage: ^11.6.9
 
 dev_dependencies:
   flutter_test:
